add mobile menu & styles for mobile version header.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </head>
 
   <body>
+    <!-- HEADER -->
     <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
@@ -61,20 +62,97 @@
             </li>
           </ul>
         </address>
+
+        <button class="menu-button" type="button" data-menu-open>
+          <svg class="menu-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
+      </div>
+
+      <!-- mobile menu -->
+      <div class="mobile-menu" data-menu>
+        <div class="container mobile-menu-container">
+          <!--  кнопка закриття вікна  -->
+          <button class="menu-close-button" type="button" data-menu-close>
+            <svg class="menu-close-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+
+          <ul class="menu-nav-list">
+            <li class="menu-nav-item">
+              <a class="menu-nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="menu-nav-item">
+              <a class="menu-nav-link" href="">Portfolio</a>
+            </li>
+            <li class="menu-nav-item">
+              <a class="menu-nav-link" href="">Contacts</a>
+            </li>
+          </ul>
+
+          <address class="menu-contacts">
+            <ul class="menu-contacts-list">
+              <li class="menu-contacts-item">
+                <a class="menu-contacts-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="menu-contacts-item">
+                <a class="menu-contacts-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+
+          <ul class="social-list">
+            <li class="social-item">
+              <a class="social-link" href="">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+
+        </div>
       </div>
     </header>
 
     <main>
       <!-- ORDER SECTION -->
-      <section class="order-section">
+      <!-- <section class="order-section">
         <div class="container">
           <h1 class="order-header">Effective Solutions for Your Business</h1>
           <button class="order-button" type="button">Order Service</button>
         </div>
-      </section>
+      </section> -->
 
       <!-- BENEFITS SECTION -->
-      <section class="benefits section">
+      <!-- <section class="benefits section">
         <div class="container">
           <h2 class="benefits-header visually-hidden">Our benefits</h2>
 
@@ -129,10 +207,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- TEAM SECTION-->
-      <section class="team section">
+      <!-- <section class="team section">
         <div class="container">
           <h2 class="team-header">Our Team</h2>
 
@@ -314,10 +392,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- PORTFOLIO SECTION -->
-      <section class="portfolio section">
+      <!-- <section class="portfolio section">
         <div class="container">
           <h2 class="portfolio-header">Our Portfolio</h2>
 
@@ -443,11 +521,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- FOOTER -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-box">
         <div class="footer-logo-thumb">
           <a class="logo footer-logo" href="./index.html"
@@ -491,10 +569,10 @@
               </a>
             </li>
           </ul>
-        </div>
+        </div> -->
 
-        <!-- Subscribe form -->
-        <div class="footer-subscribe-thumb">
+    <!-- Subscribe form -->
+    <!-- <div class="footer-subscribe-thumb">
           <p class="footer-text footer-select-text">Subscribe</p>
           <form class="subscribe-form">
             <label class="subcribe-label">
@@ -515,10 +593,10 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- модальне вікно -->
-    <div class="backdrop">
+    <div class="backdrop hidden">
       <div class="modal-window">
         <!--  кнопка закриття вікна  -->
         <button class="form-close-button" type="button">
@@ -610,5 +688,7 @@
         </form>
       </div>
     </div>
+
+    <script src="./js/menu.js"></script>
   </body>
 </html>
