change styles for order, benefits & team section

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </ul>
           </address>
 
-          <ul class="social-list">
+          <ul class="social-list menu-social-list">
             <li class="social-item">
               <a class="social-link" href="">
                 <svg class="social-icon" width="24" height="24">
@@ -144,15 +144,15 @@
 
     <main>
       <!-- ORDER SECTION -->
-      <!-- <section class="order-section">
+      <section class="order-section">
         <div class="container">
           <h1 class="order-header">Effective Solutions for Your Business</h1>
           <button class="order-button" type="button">Order Service</button>
         </div>
-      </section> -->
+      </section>
 
       <!-- BENEFITS SECTION -->
-      <!-- <section class="benefits section">
+      <section class="benefits section">
         <div class="container">
           <h2 class="benefits-header visually-hidden">Our benefits</h2>
 
@@ -207,10 +207,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- TEAM SECTION-->
-      <!-- <section class="team section">
+      <section class="team section">
         <div class="container">
           <h2 class="team-header">Our Team</h2>
 
@@ -218,7 +218,8 @@
             <li class="list-item team-item">
               <img
                 class="team-foto"
-                src="./images/imgmg.jpg"
+                srcset="./images/team/team-1-min.jpg 1x, ./images/team/team-1@2x-min.jpg 2x"
+                src="./images/team/team-1-min.jpg"
                 alt="FOTO Mark Guerrero"
                 width="264"
                 height="260"
@@ -262,7 +263,8 @@
             <li class="list-item team-item">
               <img
                 class="team-foto"
-                src="./images/imgtf.jpg"
+                srcset="./images/team/team-2-min.jpg 1x, ./images/team/team-2@2x-min.jpg 2x"
+                src="./images/team/team-2-min.jpg"
                 alt="FOTO Tom Ford"
                 width="264"
                 height="260"
@@ -306,7 +308,8 @@
             <li class="list-item team-item">
               <img
                 class="team-foto"
-                src="./images/imgcg.jpg"
+                srcset="./images/team/team-3-min.jpg 1x, ./images/team/team-3@2x-min.jpg 2x"
+                src="./images/team/team-3-min.jpg"
                 alt="FOTO Camila Garcia"
                 width="264"
                 height="260"
@@ -350,7 +353,8 @@
             <li class="list-item team-item">
               <img
                 class="team-foto"
-                src="./images/imgdw.jpg"
+                srcset="./images/team/team-4-min.jpg 1x, ./images/team/team-4@2x-min.jpg 2x"
+                src="./images/team/team-4-min.jpg"
                 alt="FOTO Daniel Wilson"
                 width="264"
                 height="260"
@@ -392,10 +396,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- PORTFOLIO SECTION -->
-      <!-- <section class="portfolio section">
+      <section class="portfolio section">
         <div class="container">
           <h2 class="portfolio-header">Our Portfolio</h2>
 
@@ -403,6 +407,7 @@
             <li class="list-item portfolio-item">
               <div class="project-thumb">
                 <img
+                  
                   src="./images/prjbankapp.jpg"
                   alt="IMG Banking App"
                   width="360"
@@ -521,7 +526,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- FOOTER -->
